<resources>
    <string name="te_beauty_app_name">Tencent Effect</string>
    <string name="te_beauty_not_support">This device does not support this property</string>
    <string name="te_beauty_not_support_beauty">This device does not support effects</string>

    <string name="te_beauty_check_no_auth_tip">Insufficient permission or missing resources. If you have questions, please contact your sales rep.</string>
    <string name="te_beauty_use_rear_camera">use rear camera</string>
    <string name="te_beauty_launch_page_title">Tencent Effects Engine</string>
    <string name="te_beauty_copying_tip">resource copying...</string>
    <string name="te_beauty_save_success_tip">Save the album successfully</string>
    <string name="te_beauty_property_invalid">Beauty parameters are illegal, please check the parameter settings</string>
    <string name="te_beauty_function_not_available_tip">The function is not available, please download the full version package demo</string>
    <string name="te_beauty_menu_layout_menu_features">Features</string>
    <string name="te_beauty_menu_layout_menu_editions">Editions</string>
    <string name="te_beauty_check_feature_tips">The current package does not include this feature.</string>
    <string name="te_beauty_check_combo_type_tips">The current project\'s package type is %s, Please use %s</string>





    <string name="te_beauty_settings_page_title">Setting</string>
    <string name="te_beauty_settings_page_item1">High Performance Mode</string>
    <string name="te_beauty_settings_page_item1_des">After enabling High Performance Mode, the beauty effects will consume fewer system CPU/GPU/memory resources, which can reduce phone overheating and lag, making it more suitable for prolonged use on low-end devices.\n\nAfter enabling High Performance Mode, the following beauty features will be unavailable:\n1. Face: Face shape, Jawline reduction, Wrinkle removal, Nasolabial fold removal. Only the "Natural Face Slimming" mode will be retained in face slimming.\n2. Eyes: Eye width, Eye height, Eye position, Eye bag removal.\n3. Eyebrows: Angle, Distance, Height, Length, Thickness, Eyebrow peak.\n4. Mouth: Smile lips.\n5. Beauty and Makeup: Beauty-black, Hair dyeing.\n6. Nose: Nose Bridge、Nasion.\n\nIt is recommended to enable High Performance Mode on low-end devices.\nTo determine whether the current device is low-end or mid-to-high-end, you can use the following interfaces:\nAndroid: getDeviceLevel method of XmagicApi\niOS: getDeviceLevel method of XMagic</string>
    <string name="te_beauty_settings_page_item2">Scan QR Code</string>
    <string name="setting_scan_unsupported">The demo does not support scanning qrcode</string>
    <string name="te_beauty_check_license_info_error_tip">The filters and animated stickers that need to be downloaded in this demo app are only intended for use in Tencent Effect Demo. Please replace them with your own resources before experiencing the app.</string>

    <string name="te_beauty_panel_view_performance_parameter">Performance parameters</string>
    <string name="te_beauty_panel_view_enhanced_mode">Enhanced mode</string>
    <string name="te_beauty_panel_view_only_white_skin">Brightening only applies to skin</string>
    <string name="te_beauty_panel_view_smart_beauty">Smart beauty\nmatching weak beauty and makeup effects for men and babies</string>
    <string name="te_beauty_panel_view_crop_texture">Crop edges</string>
    <string name="te_beauty_panel_view_face_block">Face occlusion detection\nPrevent makeup to be displayed on occluded objects.</string>


    <!--avatar文本信息-->
    <string name="te_avatar_save">Save</string>
    <string name="te_avatar_save_success">Save success</string>
    <string name="te_avatar_reset">Reset</string>
    <string name="te_avatar_reset_success">Reset success</string>
    <string name="te_avatar_action_fail">Action failed, please try later</string>

    <string name="te_avatar_voice_start">start speaking</string>
    <string name="te_avatar_voice_stop">stop speaking</string>
    <string name="te_avatar_voice_btn1">Voice Driven(Model 1)</string>
    <string name="te_avatar_voice_btn2">Voice Driven</string>
    <string name="te_avatar_body_driven">Body Driven</string>
    <string name="te_avatar_qq_show">SunnyBoy</string>

    <string name="te_avatar_launcher_name1">pinch face</string>
    <string name="te_avatar_launcher_name2">full body change</string>
    <string name="te_avatar_btn_name">Avatar Test</string>
    <string name="te_avatar_capture_main_tip">Put your face in the frame and take a photo</string>
    <string name="te_avatar_capture_sub_tip">An avatar will be automatically generated based on your face shape</string>
    <string name="te_avatar_gender_male">male</string>
    <string name="te_avatar_gender_female">female</string>
    <string name="te_avatar_gender_select_tip">Please select gender</string>
    <string name="te_avatar_whole_body">whole body</string>
    <string name="te_avatar_half_body">half body</string>
    <string name="te_avatar_launch_title">Tencent Cloud audio/video</string>
    <string name="te_avatar_change_bg">Background</string>
    <string name="te_avatar_transparent_bg">Transparent</string>






    <string name="te_avatar_type_text_edit">Edit</string>
    <string name="te_avatar_type_text_capture">Generate</string>
    <string name="te_avatar_type_text_drive">Drive</string>
    <string name="te_avatar_type_text_interactive">Interact</string>
    <string name="te_avatar_title_bar_mode_manager_txt">Appearances</string>
    <string name="te_avatar_title_bar_save_txt">Save</string>
    <string name="te_avatar_property_type_layout_txt1">Clothes</string>
    <string name="te_avatar_property_type_layout_txt2">Face</string>

    <string name="te_avatar_action_menu_layout_txt1">Gender</string>
    <string name="te_avatar_action_menu_layout_txt2">Background</string>
    <string name="te_avatar_action_menu_layout_txt3">View</string>

    <string name="te_avatar_driver_menu_txt1">Face</string>
    <string name="te_avatar_driver_menu_txt2">Speech</string>
    <string name="te_avatar_driver_menu_txt3">Body</string>
    <string name="te_avatar_driver_menu_txt4">Text</string>

    <string name="te_avatar_mode_panel_title">Appearances</string>
    <string name="te_avatar_mode_panel_btn">OK</string>
    <string name="te_avatar_mode_panel_error_tip">You haven\'t saved any appearances yet. Tap "Edit" to edit and save an appearance.</string>
</resources>